# SPM_Project-Wavefront_Pattern

./: .gitignore  CMakeLists.txt  README.md
include/ff/: config.hpp  config.hpp-e
report/: main.tex
report/chapters/: FastFlow.tex  Introduction.tex  MPI.tex  Sequential_Implementation.tex
results/: compute_graphs.ipynb
results/fastflow_dynamic/: dynamic_16_threads.csv  dynamic_4_threads.csv  dynamic_8_threads.csv  dynamic_weak_scaling.csv  ff_dynamic_weak.csv
results/fastflow_static/: efficiency_16_threads.csv  efficiency_4_threads.csv  efficiency_8_threads.csv  ff_static_weak.csv  speedup_16_threads.csv  speedup_4_threads.csv  speedup_8_threads.csv  static_16_threads.csv  static_4_threads.csv  static_8_threads.csv
results/fastflow_static/output_files/: ff_13818_4294967294.out  ff_13822_4294967294.out  ff_13823_4294967294.out  ff_13996_4294967294.out  ff_13997_4294967294.out  ff_13998_4294967294.out
results/mpi/2_nodes/: efficiency_2_nodes_1_threads.csv  speedup_2_nodes_1_threads.csv
results/mpi/4_nodes/: 4_nodes_1_threads.csv  4_nodes_2_threads.csv  efficiency_4_nodes.csv  speedup_4_nodes.csv  speedup_4_nodes_1_thread.csv
results/mpi/8_nodes/: 8_nodes_1_threads.csv  8_nodes_2_threads.csv  8_nodes_4_threads.csv  efficiency_8_nodes.csv  speedup_8_nodes.csv
results/sequential/: sequential.csv
results/sequential/output_files/: error_seq_13583_4294967294.err  seq_13583_4294967294.out
script/: all_measurements.sh  compile.sh  ff_dynamic_measurements.sh  ff_static_measurements.sh  general.sh  log_dirs.sh  mpi.sh  mpi_measurements.sh  sequential_measurements.sh
script/measurements_scripts/: ff_dynamic_measurements.sh  ff_static_measurements.sh  mpi_1_process.sh  mpi_2_process.sh  mpi_4_process.sh  mpi_8_process.sh  sequential_measurements.sh
script/mpi/: mpi_4_process.sh  mpi_8_process.sh
src/: CMakeLists.txt  new_parallel_mpi.cpp  old_parallel_mpi.cpp  parallel_fastflow.cpp  parallel_mpi.cpp  sequential.cpp
src/utils/: compute_elem.h  compute_range.h  constants.h  diag_info.h  elem_info.h  ff_diag_info.h  ff_send_info.h  ff_task.h  mpi_myinfo.h  square_matrix.h
